# tusst

./: .env.example  .gitignore  ARCHITECTURE.md  CNAME  LICENSE  README.md  SECURITY.md  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.ts
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: cargo-audit.yml  ci.yml  deploy.yml
deploy/: vps-deploy.sh
prisma/: schema.prisma  seed.ts
prisma/migrations/20260607053341_init/: migration.sql
prisma/migrations/20260716195510_add_locale_and_max_unlocked_act/: migration.sql
prisma/migrations/20260718053559_mentor_hint/: migration.sql
prisma/migrations/20260719204520_mentor_forge_raven/: migration.sql
runner/: Cargo.toml  Dockerfile  entrypoint.sh
runner-soroban/: Dockerfile  entrypoint.sh
runner-soroban/warm/: Cargo.toml
runner-soroban/warm/src/: lib.rs  test.rs
runner/crates/tusst-runner/: Cargo.toml
runner/crates/tusst-runner/src/: compile.rs  input.rs  main.rs  report.rs  run.rs
runner/crates/tusst-syntest/: Cargo.toml
runner/crates/tusst-syntest/src/: eval.rs  lib.rs  spec.rs  tokens.rs
runner/crates/tusst-syntest/tests/: errors.rs  kinds.rs
scripts/: raven-auth.mjs
src/: index.css
src/app/: globals.css  layout.tsx  page.tsx
src/app/(app)/: layout.tsx
src/app/(app)/cards/: page.tsx
src/app/(app)/lessons/[slug]/: page.tsx
src/app/(app)/login/: page.tsx
src/app/(app)/path/: page.tsx
src/app/(app)/profile/: page.tsx
src/app/(app)/tracks/[slug]/: page.tsx
src/app/(ide)/: layout.tsx
src/app/(ide)/ide/: page.tsx
src/app/api/internal/run/: route.ts
src/app/api/mentor/forge/: route.ts
src/app/api/submissions/: route.ts
src/app/onboarding/: page.tsx
src/components/: Badge.tsx  CardFan.tsx  CardsSection.tsx  ChampionCard.tsx  CharacterAvatar.tsx  FireEffect.tsx  FireSparks.tsx  FireSparksEffect.tsx  Footer.tsx  ForgeSection.tsx  GrimoireSection.tsx  HeroSection.tsx  LanguageSwitcher.tsx  LessonPlayer.tsx  LessonSteps.tsx  Markdown.tsx  Nav.tsx  NavMenu.tsx  Navigation.tsx  ProgressBar.tsx  SocialProofSection.tsx  StrategicCodingSection.tsx  TrackCard.tsx  icons.tsx
src/components/ide/: BuildToolbar.tsx  ConsolePane.tsx  ContractWorkbench.tsx  DeployPanel.tsx  EditorPane.tsx  ExplorePanel.tsx  FileTree.tsx  IdeShell.tsx  IdeTutorial.tsx  InteractPanel.tsx  MobileNotice.tsx  ProjectDrawer.tsx  RavenPanel.tsx  SpecArgsFields.tsx  WalletMenu.tsx  use-forge-run.ts
src/components/landing/: ShatteredSky.tsx
src/components/onboarding/: OnboardingFlow.tsx
src/components/ui/: button.tsx
src/content/: campaign.ts  lesson-checks.ts  lessons.ts  soroban-templates.ts  steps.ts  tracks.ts
src/content/i18n/: index.ts  server.ts  types.ts
src/content/i18n/es/: campaign.ts  catalog.ts  index.ts  lessons.ts  steps1.ts  steps2.ts
src/content/i18n/fr/: campaign.ts  catalog.ts  index.ts  lessons.ts  steps1.ts  steps2.ts
src/content/i18n/pt/: campaign.ts  catalog.ts  index.ts  lessons.ts  steps1.ts  steps2.ts
src/i18n/: actions.ts  client.tsx  config.ts  format.ts  server.ts
src/i18n/messages/: index.ts
src/i18n/messages/en/: auth.ts  common.ts  ide.ts  index.ts  landing.ts  lesson.ts  onboarding.ts  pages.ts
src/i18n/messages/es/: auth.ts  common.ts  ide.ts  index.ts  landing.ts  lesson.ts  onboarding.ts  pages.ts
src/i18n/messages/fr/: auth.ts  common.ts  ide.ts  index.ts  landing.ts  lesson.ts  onboarding.ts  pages.ts
src/i18n/messages/pt/: auth.ts  common.ts  ide.ts  index.ts  landing.ts  lesson.ts  onboarding.ts  pages.ts
src/lib/: auth.ts  campaign-progress.ts  db.ts  device.ts  forge-store.ts  github-import.ts  onboarding.ts  runner.ts  unlock.ts  validate.ts  view.ts
src/lib/mentor/: prompt.ts  provider.ts  rate-limit.ts  raven.ts  static-hints.ts
src/lib/soroban/: forge-route.ts  paths.ts  rate-limit.ts  runner.ts  types.ts  validate-files.ts
src/lib/stellar/: deploy.ts  invoke.ts  network.ts  spec-form.ts  wallet.ts
src/pages/: Index.tsx  NotFound.tsx  Waitlist.tsx
(+4 files in other folders)
