[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
publish = false

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full", "visit", "extra-traits"] }
proc-macro2 = "1"
quote = "1"
wait-timeout = "0.2"

# The runner binary ships inside the sandbox image; keep it small.
[profile.release]
strip = true
lto = true
