# Warm workspace for the Forge sandbox image.
#
# This manifest is the OpenZeppelin-compatibility lever: every crate the OZ
# Contract Wizard can emit is pinned EXACTLY here, fetched and pre-compiled at
# image build time, so user projects build with --network none + offline cargo.
# A user project may rename [package] freely — dependency artifact fingerprints
# don't include the leaf package name, so the warm target/ is fully reused.
#
# Keep these pins in sync with what the OZ Contract Wizard currently emits.
# Verified against crates.io on 2026-07-12.

[package]
name = "contract"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = "=27.0.0"
# OpenZeppelin Stellar suite
stellar-access = "=0.7.2"
stellar-accounts = "=0.7.2"
stellar-contract-utils = "=0.7.2"
stellar-fee-abstraction = "=0.7.2"
stellar-governance = "=0.7.2"
stellar-macros = "=0.7.2"
stellar-tokens = "=0.7.2"
# Common ecosystem crates — they target soroban-sdk 25 (their chain, incl.
# sdk 25.3.1 itself, gets pre-compiled here). A user project consuming them
# must pin soroban-sdk = "=25.3.1" and drop the OZ crates; mixing the two
# sdk lines in one contract fails to link (duplicate panic handler).
sep-41-token = "=1.4.0"
soroban-fixed-point-math = "=1.5.0"
blend-contract-sdk = "=2.25.0"

[dev-dependencies]
soroban-sdk = { version = "=27.0.0", features = ["testutils"] }
# Pre-warm the testutils feature unification for the ecosystem crates too —
# without these, user tests enabling them recompile the sdk chain at runtime.
sep-41-token = { version = "=1.4.0", features = ["testutils"] }
blend-contract-sdk = { version = "=2.25.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false

# Keep the native test profile lean so the warm target/ stays small.
[profile.dev]
debug = false
